examples/programs/valid/addr_lanes_site_bus.sst
.version 1
; Valid forward site_bus lanes on bus 0, word 0
; Lane encoding: data0=[word:16][site:16], data1=[dir:1][mt:1][pad:14][bus:16]
; site_bus 0: src=[0,1,2,3,4] dst=[5,6,7,8,9]

const_lane 0x0000000000000000   ; fwd, site_bus, word 0, site 0, bus 0
const_lane 0x0000000000000001   ; fwd, site_bus, word 0, site 1, bus 0
const_lane 0x0000000000000002   ; fwd, site_bus, word 0, site 2, bus 0
halt
